@@ -4,6 +4,8 @@ Pint Changelog
 0.19 (unreleased)
 -----------------
 
+- Fix a bug for offset units of higher dimension, e.g. gauge pressure.
+  (Issue #1066, thanks dalito)
 - Fix type hints of function wrapper (Issue #1431)
 - Upgrade min version of uncertainties to 3.1.4
 - Fix setting options of the application registry (Issue #1403).
